@@ -1,3 +1,4 @@
+require 'netzke/railz/engine'
 require 'netzke/railz/routes'
 require 'netzke/railz/action_view_ext'
 require 'netzke/railz/controller_extensions'
